--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -18,6 +18,11 @@
   background-color: #d8dbdd;
 }
 
+.great-mart-logo{
+  letter-spacing: 1px;
+  margin-left: -2rem;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -26,5 +31,13 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+
+@media(max-width: 768px){
+  .great-mart-logo{
+    margin-left: 10px;
+    letter-spacing: 0px;
   }
 }
