Used cdns/sass and fixed style (WEP)

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -23,6 +23,13 @@
   margin-left: -2rem;
 }
 
+/* .navbar-right-logo{
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 5px;
+  justify-content: flex-end;
+} */
+
 @keyframes fadeIn {
   from {
     opacity: 0;
