Refactor SCSS imports to use @use syntax for Bootstrap

--- a/src/bootstrap-custom.scss
+++ b/src/bootstrap-custom.scss
@@ -1,2 +1,8 @@
-@import "~bootstrap/scss/bootstrap"; 
-@import "~font-awesome/scss/font-awesome";
+// @import "~bootstrap/scss/bootstrap"; 
+// @import "~font-awesome/scss/font-awesome";
+@use "bootstrap/scss/bootstrap";
+// @use "font-awesome/scss/font-awesome";
+
+// @use "../node_modules/bootstrap/scss/bootstrap";
+// @use "../node_modules/font-awesome/scss/font-awesome";
+
