--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -18,7 +18,8 @@
 
   body{
     overflow-x: hidden;
-    /* width:100vw; */
+    height:100vh;
+    background-color: #f4f4f4 !important;
   }
 
   
